--- a/app/views/image_variants/index.html.erb
+++ b/app/views/image_variants/index.html.erb
@@ -7,3 +7,7 @@
 <% end %>
 
 <ul id="variants"></ul>
+
+<div id="loading" style="display: none">
+  <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div>
+</div>
