--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="navbar">
+      <img src="<%= asset_path('logo.svg') %>" alt="Logo" class="logo">
+    </header>
+    <main>
+      <%= yield %>
+    </main>
+    <div id="loading" style="display: none">
+      <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div>
+    </div>
   </body>
 </html>
