--- a/app/assets/stylesheets/image_generations.css
+++ b/app/assets/stylesheets/image_generations.css
@@ -14,6 +14,9 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 600px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .label {
@@ -52,4 +55,9 @@ input {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   overflow: hidden
+}
+
+.result img {
+  width: 100%;
+  height: auto;
 }
