--- a/app/assets/stylesheets/image_variants.css
+++ b/app/assets/stylesheets/image_variants.css
@@ -14,6 +14,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 600px;
 }
 
 .label {
@@ -47,9 +49,19 @@ input {
 
 .result {
   margin-top: 20px;
-  max-width: 600px;
-  max-height: 600px;
+  max-width: min(100%, 600px);
+  max-height: 100%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  overflow: hidden
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.result img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
