tentativa de remover o webpack por completo

--- a/app/views/image_generation/index.html.erb
+++ b/app/views/image_generation/index.html.erb
@@ -21,6 +21,6 @@
       </div>
       <div id="message"></div>
     </main>
-    <script src="<%= asset_pack_path 'image_generations.js' %>"></script>
+    <script src="/assets/packs/image_generations.js"></script>
   </body>
 </html>
