--- a/app/views/image_variants/index.html.erb
+++ b/app/views/image_variants/index.html.erb
@@ -19,6 +19,7 @@
       
       <div id="message"></div>
     </main>
-    <script src="<%= asset_pack_path 'image_variants.js' %>"></script>
+    <script src="/assets/packs/image_variants.js"></script>
+
   </body>
 </html>
