Revert "tentativa de remover o webpack por completo"
This reverts commit 6846d032c39a026bd6ae91aeecf7f6ad822aa8e9.

--- a/app/views/image_variants/index.html.erb
+++ b/app/views/image_variants/index.html.erb
@@ -19,7 +19,6 @@
       
       <div id="message"></div>
     </main>
-    <script src="/assets/packs/image_variants.js"></script>
-
+    <script src="<%= asset_pack_path 'image_variants.js' %>"></script>
   </body>
 </html>
