--- a/app/assets/stylesheets/image_generation.scss
+++ b/app/assets/stylesheets/image_generation.scss
@@ -14,8 +14,9 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   max-width: 600px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .label {
@@ -34,7 +35,7 @@ input {
 }
 
 .button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -49,19 +50,15 @@ input {
 
 .result {
   margin-top: 20px;
-  max-width: min(100%, 600px);
+  width: 100%;
+  max-width: 600px;
   max-height: 100%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .result img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  width: 100%;
+  height: auto;
 }
