--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Chat AI</title>
-    <%= stylesheet_link_tag 'chat' %>
+    <%= stylesheet_link_tag 'chat', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <main>
