resolve erros de produção

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@
  *
  *= require_self
  */
+ @import 'chat';
+ @import 'image_generation';
+ @import 'image_variants';
 
 :root {
   --background-color: #222;
