Faz o form image_generation virar um post

--- a/app/views/image_generation/index.html.erb
+++ b/app/views/image_generation/index.html.erb
@@ -7,7 +7,7 @@
   <body>
     <main class="image-generation">
       <h1>Gerador de imagem</h1>
-      <form class="form_generation">
+      <form method="post" class="form_generation">
         <input type="text" name="prompt" id="prompt" placeholder="Descreva a imagem desejada">
 
         <button type="submit" class="button">Gerar imagem</button>
