reorganiza rotas e "image_generation"

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
       <nav class="navbar">
         <img src="<%= asset_path('logo.svg') %>" alt="Logo" class="logo">
         <ul>
-          <li><%= link_to 'Chat', chat_path %></li>
+          <li><%= link_to 'Chat', chat_index_path %></li>
           <li><%= link_to 'Variações de Imagem', image_variants_path %></li>
-          <li><%= link_to 'Geração de Imagem', image_generation_path %></li>
+          <li><%= link_to 'Geração de Imagem', image_generation_index_path %></li>
         </ul>
       </nav>
     </header>
