--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>ChatAi</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="<%= asset_path('logo.svg') %>"/>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
